# Gamedev

./: CMakeLists.txt  Doxyfile_snake  Makefile  README.md  main_cli.c  main_desktop.cpp
Test/: CMakeLists.txt  main_test.cpp  unit_test.cpp  unit_test.h
brick_game/: CMakeLists.txt
brick_game/snake/: CMakeLists.txt  apple.cpp  apple.h  gameManager.cpp  gameManager.h  snake.cpp  snake.h  snake_api.cpp  snake_api.h
brick_game/tetris/: CMakeLists.txt  api.c  api.h  fsm.c  fsm.h  tetris.c  tetris.h
gui/: CMakeLists.txt
gui/cli/: CMakeLists.txt  debug_tools.c  debug_tools.h  interface.c  interface.h  snake_cli.c  snake_cli.h  tetris_cli.c  tetris_cli.h
gui/desktop/: CMakeLists.txt  game_widget.cpp  game_widget.h  tetris_widget.cpp  tetris_widget.h
